--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_movie_detail">MovieDetail</string>
+    <string name="title_activity_movie_detail">Movie Details</string>
+    <string name="sort_order_title">Choose how movies will be ordered</string>
+    <string name="sort_order_default">Popularity</string>
 </resources>
