--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
+    <!-- Main Activity, Movies List -->
     <string name="app_name">Popular Movies</string>
 
-    <string name="hello_world">Hello world!</string>
+    <!-- Menu -->
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_movie_detail">Movie Details</string>
+    <!-- Settings -->
+    <string name="settings_title">Popular Movie Settings</string>
     <string name="sort_order_title">Choose how movies will be ordered</string>
     <string name="sort_order_default">Popularity</string>
+
+    <!-- Movie Detail -->
+    <string name="title_activity_movie_detail">Movie Details</string>
 </resources>
