--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <!-- Settings -->
     <string name="settings_title">Popular Movie Settings</string>
     <string name="sort_order_title">Choose how movies will be ordered</string>
-    <string name="sort_order_default">Popularity</string>
+    <string name="sort_order_default">popularity.desc</string>
 
     <!-- Movie Detail -->
     <string name="title_activity_movie_detail">Movie Details</string>
