--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- Menu -->
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
 
     <!-- Settings -->
     <string name="settings_title">Popular Movie Settings</string>
