--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="sort_order_favorites">favorites</string>
     <!-- Movie Detail -->
     <string name="title_activity_movie_detail">Movie Details</string>
+    <string name="toggle_favorite">Toggle Favorite:</string>
 </resources>
