--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <!-- Movie Detail -->
     <string name="title_activity_movie_detail">Movie Details</string>
     <string name="toggle_favorite">Toggle Favorite:</string>
+    <string name="add_favorite">Add Favorite:</string>
+    <string name="remove_favorite">Remove Favorite:</string>
 </resources>
